# ECG_analyzer

./: .gitignore  CLAUDE.md  README.md  README.ru.md  ТЗ_Интерпретатор_ЭКГ_v1.md
backend/: pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: aggregator.py  bayes.py  inference.py  loader.py  preprocessor.py  report.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: DiagnosisTable.jsx  EcgChart.jsx  MetadataForm.jsx  ReportPanel.jsx  UploadZone.jsx
frontend/src/i18n/: LangContext.jsx  en.js  ru.js
