[project]
name = "ecg-interpreter"
version = "0.1.0"
description = "ЭКГ-Интерпретатор — автоматический анализ 12-канальных ЭКГ"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "torch>=2.2.0",
    "wfdb>=4.1.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
# fairseq-signals устанавливается отдельно как editable install:
# uv pip install -e /mnt/work-disk/Documents/Dev/fairseq-signals/
